set(K007232_HEADERS
	k007232.h)

set(K007232_SOURCES
	k007232.cpp)

add_library(k007232 ${K007232_SOURCES} ${K007232_HEADERS})
target_include_directories(k007232 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k007232 PRIVATE K007232_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk007232 ALIAS k007232)