set(K007782_HEADERS
	k007782.h)

set(K007782_SOURCES
	k007782.cpp)

add_library(k007782 ${K007782_SOURCES} ${K007782_HEADERS})
target_include_directories(k007782 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k007782 PRIVATE K007782_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk007782 ALIAS k007782)