set(K051316_HEADERS
	k051316.h)

set(K051316_SOURCES
	k051316.cpp)

add_library(k051316 ${K051316_SOURCES} ${K051316_HEADERS})
target_include_directories(k051316 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k051316 PRIVATE K051316_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk051316 ALIAS k051316)