set(K051649_HEADERS
	k051649.h)

set(K051649_SOURCES
	k051649.cpp)

add_library(k051649 ${K051649_SOURCES} ${K051649_HEADERS})
target_include_directories(k051649 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k051649 PRIVATE K051649_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk051649 ALIAS k051649)