set(K051937_HEADERS
	k051937.h)

set(K051937_SOURCES
	k051937.cpp)

add_library(k051937 ${K051937_SOURCES} ${K051937_HEADERS})
target_include_directories(k051937 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k051937 PRIVATE K051937_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk051937 ALIAS k051937)