set(K051962_HEADERS
	k051962.h)

set(K051962_SOURCES
	k051962.cpp)

add_library(k051962 ${K051962_SOURCES} ${K051962_HEADERS})
target_include_directories(k051962 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k051962 PRIVATE K051962_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk051962 ALIAS k051962)