set(K052001_HEADERS
	k052001.h)

set(K052001_SOURCES
	k052001.cpp)

add_library(k052001 ${K052001_SOURCES} ${K052001_HEADERS})
target_include_directories(k052001 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k052001 PRIVATE K052001_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk052001 ALIAS k052001)