set(K052109_HEADERS
	k052109.h)

set(K052109_SOURCES
	k052109.cpp)

add_library(k052109 ${K052109_SOURCES} ${K052109_HEADERS})
target_include_directories(k052109 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k052109 PRIVATE K052109_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk052109 ALIAS k052109)