set(K052535_HEADERS
	k052535.h)

set(K052535_SOURCES
	k052535.cpp)

add_library(k052535 ${K052535_SOURCES} ${K052535_HEADERS})
target_include_directories(k052535 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k052535 PRIVATE K052535_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk052535 ALIAS k052535)