set(K053260_HEADERS
	k053260.h)

set(K053260_SOURCES
	k053260.cpp)

add_library(k053260 ${K053260_SOURCES} ${K053260_HEADERS})
target_include_directories(k053260 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k053260 PRIVATE K053260_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk053260 ALIAS k053260)