set(K054000_HEADERS
	k054000.h)

set(K054000_SOURCES
	k054000.cpp)

add_library(k054000 ${K054000_SOURCES} ${K054000_HEADERS})
target_include_directories(k054000 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k054000 PRIVATE K054000_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk054000 ALIAS k054000)