set(K051960_HEADERS
	k051960.h)

set(K051960_SOURCES
	k051960.cpp)

add_library(k051960 ${K051960_SOURCES} ${K051960_HEADERS})
target_include_directories(k051960 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k051960 PRIVATE K051960_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk051960 ALIAS k051960)