set(K052591_HEADERS
	k052591.h)

set(K052591_SOURCES
	k052591.cpp)

add_library(k052591 ${K052591_SOURCES} ${K052591_HEADERS})
target_include_directories(k052591 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(k052591 PRIVATE K052591_STATIC=1 _CRT_SECURE_NO_WARNINGS=1)
add_library(libk052591 ALIAS k052591)